# md2conf

./: pyproject.toml  requirements.txt
md2conf/: application.py  converter.py
