[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "markdown-to-confluence"
version = "0.1.0"
description = ""
authors = ["thechumley <andy.prosser@unipro.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "*"
types-lxml = "*"
markdown = "*"
markdown-include = "*"
types-markdown = "*"
pymdown-extensions = "*"
requests = "*"
types-requests = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
